# typedb-driver

./: .bazelrc  BUILD  Cargo.toml  MODULE.bazel  README.md  RELEASE_NOTES_LATEST.md
.circleci/: config.yml
.circleci/windows/: prepare.bat
.factory/: automation.yml
1/data/: _server_id
2/data/: _server_id
3/data/: _server_id
c/: BUILD  docs_structure.bzl  typedb_driver.i
c/src/: answer.rs  database.rs  database_manager.rs  driver_options.rs  given_rows.rs  iterator.rs  lib.rs  memory.rs  transaction.rs
c/swig/: typedb_driver_csharp.swg  typedb_driver_java.swg
csharp/: BUILD  README.md  TypeDB.cs  TypeDBExample.cs  custom_transition.bzl  docs_structure.bzl
csharp/Analyze/: AnalyzedQuery.cs
csharp/Api/: AssemblyInfo.cs  DriverOptions.cs  ITransaction.cs
csharp/Concept/: GivenRows.cs
csharp/Connection/: Transaction.cs
csharp/Test/: rules.bzl
dependencies/maven/: artifacts.snapshot
dependencies/typedb/: repositories.bzl
http-ts/: docs_structure.bzl
http-ts/src/: index.ts
java/: BUILD  README.md  TypeDB.java  TypeDBExample.java  docs_structure.bzl  maven_dependencies.MODULE.bazel
java/analyze/: AnalyzedQueryImpl.java
java/answer/: BUILD
java/api/: BUILD  Driver.java  DriverOptions.java  QueryOptions.java  Transaction.java  TypeDBTransaction.java
java/api/answer/: ConceptRow.java  ConceptTree.java  ConceptTreesStreamQueryAnswer.java  QueryAnswer.java
java/api/concept/: GivenRows.java
java/api/concept/thing/: Relation.java  Thing.java
java/api/concept/type/: AttributeType.java  ThingType.java
java/api/concept/value/: Value.java
java/api/database/: DatabaseManager.java
java/api/user/: User.java  UserManager.java
java/common/exception/: ErrorMessage.java
java/concept/: BUILD  GivenRowsImpl.java
java/concept/answer/: ConceptRowImpl.java  ConceptRowsStreamQueryAnswerImpl.java  ConceptTreeImpl.java  ConceptTreesStreamQueryAnswerImpl.java  QueryAnswerImpl.java
java/concept/thing/: AttributeImpl.java  RelationImpl.java  ThingImpl.java
java/concept/type/: AttributeTypeImpl.java  EntityTypeImpl.java  RelationTypeImpl.java  RoleTypeImpl.java  ThingTypeImpl.java
java/concept/value/: ValueImpl.java
java/connection/: BUILD  DriverImpl.java  TransactionImpl.java  TypeDBDatabaseImpl.java  TypeDBDatabaseManagerImpl.java  TypeDBTransactionImpl.java
java/test/: maven_dependencies.MODULE.bazel
java/test/behaviour/: BUILD  rules.bzl
java/test/behaviour/config/: BUILD  Parameters.java
java/test/behaviour/connection/: BUILD
java/test/behaviour/connection/database/: BUILD
java/test/behaviour/connection/transaction/: BUILD
java/test/behaviour/connection/user/: BUILD  UserSteps.java
java/test/behaviour/debug/: BUILD
java/test/behaviour/driver/cluster/: BUILD
java/test/behaviour/driver/concept/: BUILD
java/test/behaviour/driver/connection/: BUILD
java/test/behaviour/driver/migration/: BUILD
java/test/behaviour/driver/query/: BUILD
java/test/behaviour/driver/user/: BUILD
java/test/behaviour/query/: BUILD  QuerySteps.java
java/test/behaviour/util/: BUILD
java/test/deployment/src/test/java/application/: MavenApplicationTest.java
java/test/integration/: AddressTranslationTest.java  BUILD  DriverQueryTest.java  ExampleTest.java  ValueTest.java
java/test/integration/cluster/: BUILD
java/user/: BUILD
nodejs/: TypeDB.ts  dependencies_internal.ts  index.ts
nodejs/common/: Duration.ts
nodejs/concept/: ConceptImpl.ts  ConceptManagerImpl.ts
nodejs/connection/: DriverImpl.ts  TypeDBDatabaseImpl.ts  TypeDBDatabaseManagerImpl.ts  TypeDBStubImpl.ts  TypeDBTransactionImpl.ts
nodejs/query/: QueryManagerImpl.ts
nodejs/user/: UserImpl.ts  UserManagerImpl.ts
python/: README.md  docs_structure.bzl  example.py
rust/: Cargo.toml  README.md  docs_structure.bzl  example.rs
tool/docs/: maven_dependencies.MODULE.bazel  update.sh  update_readme.sh
tool/docs/c/: rules.bzl
tool/docs/cpp/: rules.bzl
tool/docs/csharp/: DoxygenParserCsharp.kt  rules.bzl
tool/docs/examples/: rules.bzl
tool/docs/httpts/: rules.bzl
tool/docs/java/: rules.bzl
tool/docs/nodejs/: rules.bzl
tool/docs/python/: PythonDocsParser.kt  rules.bzl
tool/docs/rust/: rules.bzl
(+296 files in other folders)
